--- a/src/assets/scss/Variables.scss
+++ b/src/assets/scss/Variables.scss
@@ -1,3 +1,6 @@
 $theme-colors: (
-    "primary": #fcb141
+    "primary": #fcb141,
+    "bg-light": #fff
 );
+
+$light: #fff;
